Changed the name of the App.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="flutter_practice_19_hw"
+        android:label="Moto World"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
